--- a/src/static/sass/_fonts.sass
+++ b/src/static/sass/_fonts.sass
@@ -1,2 +1,5 @@
 @import "_mixins/font-face.sass"
-+font-face('OpenSans','../fonts/OpenSans/opensans')
++font-face('RalewayRegular','../fonts/RalewayRegular/Raleway-Regular')
++font-face('RalewayBold','../fonts/RalewayBold/Raleway-Bold')
++font-face('PlayfairBold','../fonts/PlayfairBold/PlayfairDisplay-Bold')
++font-face('PlayfairBoldItalic','../fonts/PlayfairiBoldItalic/PlayfairDisplay-BoldItalic')
