--- a/src/static/sass/_vars.sass
+++ b/src/static/sass/_vars.sass
@@ -1,2 +1,5 @@
-$default-font: "OpenSans", 'Arial', sans-serif
-$accent: blue
+$default-font: "RalewayRegular", 'Arial', sans-serif
+$RalewayBold: "RalewayBold", "Arial", sans-serif
+$PlayfairBold: "PlayfairBold", "Arial", sans-serif
+$PlayfairiBoldItalic: "PlayfairBoldItalic", "Arial", sans-serif
+$accent: #e59205
