--- a/src/static/sass/smart-grid.sass
+++ b/src/static/sass/smart-grid.sass
@@ -1,44 +1,48 @@
 $columns: 12
 $atom: (100% / $columns)
 
-$break_lg: 1920px
+$break_lg: 1680px
+$break_lgx: 1560px
 $break_desktop: 1440px
 $break_md: 1366px
 $break_mdx: 1280px
-$break_tablet: 1024px
+$break_tablet: 992px
 $break_tabletx: 768px
+$break_phoneh: 576px
 $break_phone: 480px
-$break_iphone: 320px
 
-$offset: 30px
+$offset: 60px
 $offset_lg: $offset
+$offset_lgx: $offset
 $offset_desktop: $offset
 $offset_md: $offset
 $offset_mdx: $offset
 $offset_tablet: $offset
 $offset_tabletx: $offset
+$offset_phoneh: $offset
 $offset_phone: $offset
-$offset_iphone: $offset
 
 $offset_one_side: ($offset / 2)
 $offset_lg_one_side: ($offset_lg / 2)
+$offset_lgx_one_side: ($offset_lgx / 2)
 $offset_desktop_one_side: ($offset_desktop / 2)
 $offset_md_one_side: ($offset_md / 2)
 $offset_mdx_one_side: ($offset_mdx / 2)
 $offset_tablet_one_side: ($offset_tablet / 2)
 $offset_tabletx_one_side: ($offset_tabletx / 2)
+$offset_phoneh_one_side: ($offset_phoneh / 2)
 $offset_phone_one_side: ($offset_phone / 2)
-$offset_iphone_one_side: ($offset_iphone / 2)
 
-$fields: 20px
-$fields_lg: 20px
-$fields_desktop: 15px
-$fields_md: 15px
-$fields_mdx: 15px
-$fields_tablet: 15px
-$fields_tabletx: 15px
-$fields_phone: 10px
-$fields_iphone: 10px
+$fields: 30px
+$fields_lg: 30px
+$fields_lgx: 30px
+$fields_desktop: 30px
+$fields_md: 30px
+$fields_mdx: 30px
+$fields_tablet: 30px
+$fields_tabletx: 30px
+$fields_phoneh: 30px
+$fields_phone: 30px
 
 =wrapper-full()
     padding-left: $fields
@@ -47,6 +51,10 @@ $fields_iphone: 10px
     +lg-block()
         padding-left: $fields_lg
         padding-right: $fields_lg
+
+    +lgx-block()
+        padding-left: $fields_lgx
+        padding-right: $fields_lgx
 
     +desktop-block()
         padding-left: $fields_desktop
@@ -68,13 +76,13 @@ $fields_iphone: 10px
         padding-left: $fields_tabletx
         padding-right: $fields_tabletx
 
+    +phoneh-block()
+        padding-left: $fields_phoneh
+        padding-right: $fields_phoneh
+
     +phone-block()
         padding-left: $fields_phone
         padding-right: $fields_phone
-
-    +iphone-block()
-        padding-left: $fields_iphone
-        padding-right: $fields_iphone
 
 =row-offsets()
     margin-left: ($offset_one_side * -1)
@@ -125,6 +133,10 @@ $fields_iphone: 10px
     $val: 100% / $columns * $n
     +lg(width, #{calc(#{$val} - #{$offset_lg})})
 
+=size-lgx($n)
+    $val: 100% / $columns * $n
+    +lgx(width, #{calc(#{$val} - #{$offset_lgx})})
+
 =size-desktop($n)
     $val: 100% / $columns * $n
     +desktop(width, #{calc(#{$val} - #{$offset_desktop})})
@@ -145,13 +157,13 @@ $fields_iphone: 10px
     $val: 100% / $columns * $n
     +tabletx(width, #{calc(#{$val} - #{$offset_tabletx})})
 
+=size-phoneh($n)
+    $val: 100% / $columns * $n
+    +phoneh(width, #{calc(#{$val} - #{$offset_phoneh})})
+
 =size-phone($n)
     $val: 100% / $columns * $n
     +phone(width, #{calc(#{$val} - #{$offset_phone})})
-
-=size-iphone($n)
-    $val: 100% / $columns * $n
-    +iphone(width, #{calc(#{$val} - #{$offset_iphone})})
 
 =shift($n)
     $val: 100% / $columns * $n
@@ -204,6 +216,32 @@ $fields_iphone: 10px
 =shift-lg-padding-right($n)
     $val: 100% / $columns * $n
     +lg(padding-right, #{calc(#{$val} + #{$offset_lg_one_side})})
+
+=shift-lgx($n)
+    $val: 100% / $columns * $n
+    +lgx(margin-left, #{calc(#{$val} + #{$offset_lgx_one_side})})
+    +lgx(margin-right, #{calc(#{$val} + #{$offset_lgx_one_side})})
+
+=shift-lgx-left($n)
+    $val: 100% / $columns * $n
+    +lgx(margin-left, #{calc(#{$val} + #{$offset_lgx_one_side})})
+
+=shift-lgx-right($n)
+    $val: 100% / $columns * $n
+    +lgx(margin-right, #{calc(#{$val} + #{$offset_lgx_one_side})})
+
+=shift-lgx-padding($n)
+    $val: 100% / $columns * $n
+    +lgx(padding-left, #{calc(#{$val} + #{$offset_lgx_one_side})})
+    +lgx(padding-right, #{calc(#{$val} + #{$offset_lgx_one_side})})
+
+=shift-lgx-padding-left($n)
+    $val: 100% / $columns * $n
+    +lgx(padding-left, #{calc(#{$val} + #{$offset_lgx_one_side})})
+
+=shift-lgx-padding-right($n)
+    $val: 100% / $columns * $n
+    +lgx(padding-right, #{calc(#{$val} + #{$offset_lgx_one_side})})
 
 =shift-desktop($n)
     $val: 100% / $columns * $n
@@ -335,6 +373,32 @@ $fields_iphone: 10px
     $val: 100% / $columns * $n
     +tabletx(padding-right, #{calc(#{$val} + #{$offset_tabletx_one_side})})
 
+=shift-phoneh($n)
+    $val: 100% / $columns * $n
+    +phoneh(margin-left, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+    +phoneh(margin-right, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+
+=shift-phoneh-left($n)
+    $val: 100% / $columns * $n
+    +phoneh(margin-left, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+
+=shift-phoneh-right($n)
+    $val: 100% / $columns * $n
+    +phoneh(margin-right, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+
+=shift-phoneh-padding($n)
+    $val: 100% / $columns * $n
+    +phoneh(padding-left, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+    +phoneh(padding-right, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+
+=shift-phoneh-padding-left($n)
+    $val: 100% / $columns * $n
+    +phoneh(padding-left, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+
+=shift-phoneh-padding-right($n)
+    $val: 100% / $columns * $n
+    +phoneh(padding-right, #{calc(#{$val} + #{$offset_phoneh_one_side})})
+
 =shift-phone($n)
     $val: 100% / $columns * $n
     +phone(margin-left, #{calc(#{$val} + #{$offset_phone_one_side})})
@@ -361,38 +425,20 @@ $fields_iphone: 10px
     $val: 100% / $columns * $n
     +phone(padding-right, #{calc(#{$val} + #{$offset_phone_one_side})})
 
-=shift-iphone($n)
-    $val: 100% / $columns * $n
-    +iphone(margin-left, #{calc(#{$val} + #{$offset_iphone_one_side})})
-    +iphone(margin-right, #{calc(#{$val} + #{$offset_iphone_one_side})})
-
-=shift-iphone-left($n)
-    $val: 100% / $columns * $n
-    +iphone(margin-left, #{calc(#{$val} + #{$offset_iphone_one_side})})
-
-=shift-iphone-right($n)
-    $val: 100% / $columns * $n
-    +iphone(margin-right, #{calc(#{$val} + #{$offset_iphone_one_side})})
-
-=shift-iphone-padding($n)
-    $val: 100% / $columns * $n
-    +iphone(padding-left, #{calc(#{$val} + #{$offset_iphone_one_side})})
-    +iphone(padding-right, #{calc(#{$val} + #{$offset_iphone_one_side})})
-
-=shift-iphone-padding-left($n)
-    $val: 100% / $columns * $n
-    +iphone(padding-left, #{calc(#{$val} + #{$offset_iphone_one_side})})
-
-=shift-iphone-padding-right($n)
-    $val: 100% / $columns * $n
-    +iphone(padding-right, #{calc(#{$val} + #{$offset_iphone_one_side})})
-
 =lg($name, $value)
     @media screen and (max-width: $break_lg)
         #{$name}: $value
 
 =lg-block()
     @media screen and (max-width: $break_lg)
+        @content
+
+=lgx($name, $value)
+    @media screen and (max-width: $break_lgx)
+        #{$name}: $value
+
+=lgx-block()
+    @media screen and (max-width: $break_lgx)
         @content
 
 =desktop($name, $value)
@@ -435,20 +481,20 @@ $fields_iphone: 10px
     @media screen and (max-width: $break_tabletx)
         @content
 
+=phoneh($name, $value)
+    @media screen and (max-width: $break_phoneh)
+        #{$name}: $value
+
+=phoneh-block()
+    @media screen and (max-width: $break_phoneh)
+        @content
+
 =phone($name, $value)
     @media screen and (max-width: $break_phone)
         #{$name}: $value
 
 =phone-block()
     @media screen and (max-width: $break_phone)
-        @content
-
-=iphone($name, $value)
-    @media screen and (max-width: $break_iphone)
-        #{$name}: $value
-
-=iphone-block()
-    @media screen and (max-width: $break_iphone)
         @content
 
 =from($min_width)
